// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Articles A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`Canonical Articles Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Articles Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Articles Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "69",
  },
  {
    "p": "persian.articles.c4vlle3q337o.page",
  },
  {
    "x1": "[urn:bbc:optimo:asset:c4vlle3q337o]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-persian]",
  },
  {
    "x4": "[fa]",
  },
  {
    "x7": "[article]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[پهپادی%20که%20برایتان%20قهوه%20می‌آورد]",
  },
  {
    "x11": "[2019-05-28T13:42:44.996Z]",
  },
  {
    "x12": "[2019-07-23T15:47:11.893Z]",
  },
]
`;

exports[`Canonical Articles Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 2`] = `
{
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 3`] = `
{
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 4`] = `
{
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 5`] = `
{
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 6`] = `
{
  "text": "کوکی ها",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 7`] = `
{
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.co.uk/persian/send/u50853555",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 8`] = `
{
  "text": "اخبار به زبان‌های دیگر",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Articles Footer Anchors should match text and url 9`] = `
{
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`Canonical Articles Footer Paragraphs should match text 1`] = `"© 2025 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`Canonical Articles Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, فارسی",
  "svg": <path
    d="M759.927 268.693a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V162.395h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.646v-72.698h22.003v106.298h-23.192zM804.186 162.395h73.145v19.029h-50.25v23.044h44.6v19.03h-44.6v26.165h53.075v19.03h-75.97V162.395zM982.1 268.693a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.978 2391.54 2391.54 0 01-9.217 35.978 2452.296 2452.296 0 01-9.812 35.978H919.51a2032.839 2032.839 0 01-14.57-52.629c-4.66-17.74-9.069-35.63-13.232-53.67h24.977a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.587 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.82 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.437h24.531a1845.28 1845.28 0 01-13.231 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 270.923c-5.849 0-11.621-.646-17.32-1.933a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.664 33.747 9.664 6.74 0 11.868-1.139 15.388-3.42 3.517-2.279 5.277-5.45 5.277-9.514 0-3.071-.868-5.476-2.601-7.211-1.736-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.002-2.973-15.462-4.757-4.46-1.784-8.228-3.888-11.298-6.319-3.073-2.427-5.403-5.352-6.988-8.77-1.586-3.42-2.379-7.509-2.379-12.266 0-6.74 1.71-12.537 5.13-17.395 3.419-4.854 8.25-8.597 14.495-11.224 6.244-2.625 13.677-3.94 22.3-3.94 5.65 0 11.2.646 16.651 1.933 5.45 1.29 10.356 3.024 14.719 5.204v20.218c-4.363-2.676-9.293-4.757-14.793-6.243-5.5-1.487-11.027-2.231-16.577-2.231-6.046 0-10.73 1.04-14.049 3.122-3.322 2.082-4.98 5.055-4.98 8.92 0 2.776.792 4.981 2.378 6.616 1.584 1.635 3.84 2.974 6.765 4.014 2.922 1.041 6.367 2.058 10.332 3.048 5.055 1.29 9.761 2.702 14.124 4.237 4.36 1.538 8.2 3.494 11.521 5.872 3.32 2.38 5.896 5.403 7.731 9.07 1.833 3.667 2.75 8.176 2.75 13.528 0 7.039-1.735 13.06-5.202 18.063-3.471 5.007-8.475 8.823-15.016 11.448-6.542 2.625-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 1`] = `
{
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 2`] = `
{
  "text": "جنگ اسرائیل-ایران",
  "url": "/persian/topics/cwy6874zgpqt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 3`] = `
{
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 4`] = `
{
  "text": "ویدیو",
  "url": "/persian/topics/c6z7mnr559gt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 5`] = `
{
  "text": "تلویزیون",
  "url": "/persian/topics/cw9qgeqd1zqt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 6`] = `
{
  "text": "ايران",
  "url": "/persian/topics/ckdxnwvwwjnt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 7`] = `
{
  "text": "افغانستان",
  "url": "/persian/topics/cvjp23v3083t",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 8`] = `
{
  "text": "جهان",
  "url": "/persian/topics/c1d8ye58xl8t",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 9`] = `
{
  "text": "هنر",
  "url": "/persian/topics/c9wpm0epm45t",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 10`] = `
{
  "text": "ورزش",
  "url": "/persian/topics/cnq6879k7yjt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 11`] = `
{
  "text": "اقتصاد",
  "url": "/persian/topics/cl8l9mvlllqt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 12`] = `
{
  "text": "دانش",
  "url": "/persian/topics/ckdxnwr4r1yt",
}
`;

exports[`Canonical Articles Header Navigation link should match text and url 13`] = `
{
  "text": "فراتر از خبر",
  "url": "/persian/topics/cxr3ex12k6et",
}
`;

exports[`Canonical Articles Image Caption should match text 1`] = `"توضیح تصویر، نوشیدنی‌ها داغ در بسته‌های سربسته توزیع می‌شوند "`;

exports[`Canonical Articles Image Copyright Non BBC should match snapshot 1`] = `
<span
  lang="en-GB"
>
  Getty Images
</span>
`;

exports[`Canonical Articles Image should match snapshot 1`] = `
<img
  alt="قهوه"
  class="css-1seqhu9"
  height="360"
  loading="eager"
  sizes="(min-width: 1008px) 760px, 100vw"
  src="https://ichef.bbci.co.uk/ace/ws/640/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/240/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp 320w, https://ichef.bbci.co.uk/ace/ws/480/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp 480w, https://ichef.bbci.co.uk/ace/ws/624/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp 624w, https://ichef.bbci.co.uk/ace/ws/640/cpsdevpb/1e4e/test/60a1cf00-814e-11e9-b0be-cb6d2b512d8b.jpg.webp 640w"
  style="aspect-ratio:640 / 360"
  width="640"
/>
`;

exports[`Canonical Articles Main heading should match text 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`Canonical Articles Most Read has item with rank 1`] = `
{
  "text": "ایران در آستانه بحران بنزین؛ تابستانی دشوار برای دولت رئیسی در پیش است",
  "url": "https://www.bbc.com/persian/articles/c4n9j7rx27lo",
}
`;

exports[`Canonical Articles Most Read has item with rank 2`] = `
{
  "text": "پرونده حمید نوری؛ وکلای مدافع: نوری فریب خورد",
  "url": "https://www.bbc.com/persian/articles/cm58lxneyrvo",
}
`;

exports[`Canonical Articles Most Read has item with rank 3`] = `
{
  "text": "اما رادوکانو: گاهی آرزو می‌کنم که ای کاش قهرمان اوپن آمریکا نمی‌شدم",
  "url": "https://www.bbc.com/persian/articles/cx7e0eexdeeo",
}
`;

exports[`Canonical Articles Most Read has item with rank 4`] = `
{
  "text": "ملی‌پوش سابق هلند برای چاقو زدن به فامیلش به ۱۸ ماه حبس محکوم شد",
  "url": "https://www.bbc.com/persian/articles/cqe0045zrpdo",
}
`;

exports[`Canonical Articles Most Read has item with rank 5`] = `
{
  "text": "وزیر خارجه آمریکا در پکن؛ شی: پیشرفت‌هایی در روابط حاصل شده است، بلینکن: رقابت نباید بدل به دشمنی شود",
  "url": "https://www.bbc.com/persian/articles/cjmyylvr1nvo",
}
`;

exports[`Canonical Articles Most Read has item with rank 6`] = `
{
  "text": "سگم سرطان پستان مرا تشخیص داد",
  "url": "https://www.bbc.com/persian/articles/cyxgqq1796qo",
}
`;

exports[`Canonical Articles Most Read has item with rank 7`] = `
{
  "text": "لوح ۲۸۰۰ ساله از ایتالیا به عراق بازگردانده شد",
  "url": "https://www.bbc.com/persian/articles/cydg800g89yo",
}
`;

exports[`Canonical Articles Most Read has item with rank 8`] = `
{
  "text": "نمایندگان کشورها و نهادها در اجلاس سازمان ملل خواستار پایان یافتن سیاست‌های تبعیض‌آمیز طالبان علیه زنان شدند",
  "url": "https://www.bbc.com/persian/articles/cgr664ezld5o",
}
`;

exports[`Canonical Articles Most Read has item with rank 9`] = `
{
  "text": "چرا موبایل داغ می‌کند و چطور آن را خنک نگه داریم؟",
  "url": "https://www.bbc.com/persian/articles/c9wj7ejl17po",
}
`;

exports[`Canonical Articles Most Read has item with rank 10`] = `
{
  "text": "هشتگ «داستان_ما_یکیست» در چهلمین سالگرد اعدام ۱۰ زن بهائی در شیراز",
  "url": "https://www.bbc.com/persian/articles/c6plvgyz614o",
}
`;

exports[`Canonical Articles Paragraph should match paragraph text 1`] = `"شاید خیلی طول نکشد که زمانی برسد که وقتی خسته هستید و مثلا هوس فنجان قهوه‌ای را کردید، پهپادی را ببینید که با قهوه سراغتان می‌آید."`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Articles SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Articles SEO Canonical link 1`] = `"http://localhost:7081/persian/articles/c4vlle3q337o"`;

exports[`Canonical Articles SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Articles SEO Heading level 1 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`Canonical Articles SEO Lang attribute 1`] = `"fa"`;

exports[`Canonical Articles SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "noBylinesPolicy": "https://www.bbc.com/persian/institutional-49283091#authorexpertise",
      },
      "dateModified": "2019-07-23T15:47:11.893Z",
      "datePublished": "2019-05-28T13:42:44.996Z",
      "description": "پهپادی که برایتان قهوه می‌آورد",
      "headline": "پهپادی که برایتان قهوه می‌آورد",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "fa",
        "name": "Persian",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/persian/articles/c4vlle3q337o",
        "@type": "WebPage",
        "name": "پهپادی که برایتان قهوه می‌آورد",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7081/persian/articles/c4vlle3q337o",
    },
  ],
}
`;

exports[`Canonical Articles SEO OG description 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`Canonical Articles SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical Articles SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical Articles SEO OG locale 1`] = `"fa"`;

exports[`Canonical Articles SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`Canonical Articles SEO OG title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;

exports[`Canonical Articles SEO OG type 1`] = `"article"`;

exports[`Canonical Articles SEO OG url 1`] = `"http://localhost:7081/persian/articles/c4vlle3q337o"`;

exports[`Canonical Articles SEO Page title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;

exports[`Canonical Articles SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Articles SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`Canonical Articles SEO Twitter description 1`] = `"پهپادی که برایتان قهوه می‌آورد"`;

exports[`Canonical Articles SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`Canonical Articles SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`Canonical Articles SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`Canonical Articles SEO Twitter title 1`] = `"پهپادی که برایتان قهوه می‌آورد - BBC News فارسی"`;

exports[`Canonical Articles Timestamp should match text and date 1`] = `
{
  "date": "2019-05-28",
  "text": "۷ خرداد ۱۳۹۸ - ۲۸ مه ۲۰۱۹",
}
`;
